--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
             </div>
         </div>
         <div class=" footer__bottom">
-            <span class="footer__botton-text">© 2020. span All Rights Reserved.</span>
+            <span class="footer__botton-text">© 2020. All Rights Reserved.</span>
             <div class="hug">
                 <div class="hug__text">Go top</div>
                 <div class="hug__arrow"><a class="hug__arrow-link" href="#top"><img class="hug__arrow-img"
@@ -306,7 +306,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/slick.min.js"></script>
     <script src="js/script.js"></script>
-    <script type="text/javascript" src="libs/vanilla-tilt.min.js"></script>
+    <!-- <script type="text/javascript" src="libs/vanilla-tilt.min.js"></script>
 <script type="text/javascript">
 	VanillaTilt.init(document.querySelector(".your-element"), {
 		max: 25,
@@ -314,7 +314,7 @@
 	});
 	
 	//It also supports NodeList
-	VanillaTilt.init(document.querySelectorAll(".your-element"));
+	VanillaTilt.init(document.querySelectorAll(".your-element")); -->
 </script>
 </body>
 </html
