--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
     <section class="products" id="products">
         <div class="products__items">
             <figure class="products__item products__item--purpure">
-                <img class="products__item-image " src="assets/images/products/img1.png" alt="Dark Chocolate Smoothie">
+                <img data-tilt data-tilt-reset="false" class="products__item-image " src="assets/images/products/img1.png" alt="Dark Chocolate Smoothie">
                 <h5 class="products__item-title">Dark Chocolate Smoothie</h5>
                 <div class="products__item-mesure">100 ml</div>
                 <button class="products__item-btn btn products__item-btn--purpure">Buy</button>
@@ -261,16 +261,16 @@
                 class="instagram__user-logo">ashasuperfoods</span> </a>
         <div class="instagram__image-items">
             <figure class="instagram__image-item">
-                <img class="instagram__image" src="assets/images/instagram/img1.jpg" alt="instagram__image">
+                <img data-tilt data-tilt-reset="false" class="instagram__image" src="assets/images/instagram/img1.jpg" alt="instagram__image">
             </figure>
             <figure class="instagram__image-item">
-                <img class="instagram__image" src="assets/images/instagram/img2.jpg" alt="instagram__image">
+                <img data-tilt data-tilt-reset="false" class="instagram__image" src="assets/images/instagram/img2.jpg" alt="instagram__image">
             </figure>
             <figure class="instagram__image-item">
-                <img class="instagram__image" src="assets/images/instagram/img3.jpg" alt="instagram__image">
+                <img data-tilt data-tilt-reset="false" class="instagram__image" src="assets/images/instagram/img3.jpg" alt="instagram__image">
             </figure>
             <figure class="instagram__image-item">
-                <img class="instagram__image" src="assets/images/instagram/img4.jpg" alt="instagram__image">
+                <img data-tilt data-tilt-reset="false" class="instagram__image" src="assets/images/instagram/img4.jpg" alt="instagram__image">
             </figure>
         </div>
     </section>
@@ -343,25 +343,25 @@
         </div>
         </div>
     </footer>
-    <!-- <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>AOS.init({
         disable: function() {
           var maxWidth =800; //размер экрана на котором отключается анимация/
           return window.innerWidth < maxWidth;
         }
-      });</script> -->
+      });</script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/slick.min.js"></script>
     <script src="js/script.js"></script>
-    <!-- <script type="text/javascript" src="libs/vanilla-tilt.min.js"></script>
+    <script type="text/javascript" src="libs/vanilla-tilt.min.js"></script>
 <script type="text/javascript">
-	VanillaTilt.init(document.querySelector(".your-element"), {
+	VanillaTilt.init(document.querySelector(".payment__image"), {
 		max: 25,
 		speed: 400
 	});
 	
 	//It also supports NodeList
-	VanillaTilt.init(document.querySelectorAll(".your-element")); -->
+	VanillaTilt.init(document.querySelectorAll(".payment__image"));
     </script>
 </body>
 
